# unzipr.rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/byte_unit/: mod.rs
src/compression/: mod.rs
src/indicatif_ext/: mod.rs
src/rust_ext/: mod.rs
src/thread_pool/: mod.rs
tests/: decryption.rs  extraction.rs
