[package]
name = "unzipr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indicatif = { path = "../../Contrib/indicatif.rs" }
itertools = "0.13.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.2.0"
