[package]
name = "unzipr"
version = "0.1.0"
edition = "2021"
authors = ["Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>"]

description = "A command line utility that recursively unzip files in a directory."
keywords = ["unzip", "archive", "zip"]
categories = ["compression"]
license = "MIT"
repository = "https://github.com/cdellacqua/unzipr.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.9"
itertools = "0.13.0"
lending_thread_pool = "0.1.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
sha2 = { version = "0.10.8" }
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.2.0"

[dev-dependencies]
tempfile = "3.14.0"
